# fantastic-train-wordsearch-generator

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
data/: input_book.json  input_page.json
data/books/: 01_animals_20_lists.json  02_travel&cities_20_lists.json  03_food&drinks_20_lists.json  04_jobs&professions_20_lists.json  05_sports_20_lists.json  06_seasons&weather_20_lists.json
data/templates/: description.html
docs/: index.md  input_type_usage.md
releases/03/: food_&_drinks_data.json
releases/04/: jobs_&_professions_data.json
releases/05/: sports-description.html  sports_data.json
releases/06/: seasons_&_weather-description.html  seasons_&_weather_data.json
scripts/: generate_big_ws_book.py  generate_wordsearch.py  generate_ws_book.py  generate_ws_page.py  validate_books.py
src/intro/: __init__.py  pages.py
src/wordsearch/: __init__.py  cover_image.py  docx_export.py  export_docx.py  generate.py  html_export.py  pdf_render.py
tests/: test_generate.py  test_pdf_render.py
